Desenvolvido login e cadastro de usuarios

--- a/.env
+++ b/.env
@@ -5,3 +5,9 @@ APP_KEY=40dLk0PlZx5N7T4-9qzQZmb0PFq2YuP2
 DRIVE_DISK=local
 SESSION_DRIVER=cookie
 CACHE_VIEWS=false
+DB_CONNECTION=mysql
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_USER=root
+MYSQL_PASSWORD=
+MYSQL_DB_NAME=mycake
